--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -31,9 +31,9 @@ jobs:
         id: version
         run: curl -s https://raw.githubusercontent.com/xh-polaris/chore/main/bump_version.sh | bash -s -- ${{ env.USERNAME }}/${{ env.IMAGE_NAME }}
 
-      # Workaround: https://github.com/docker/build-push-action/issues/461
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+#      # Workaround: https://github.com/docker/build-push-action/issues/461
+#      - name: Setup Docker buildx
+#        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
