--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -19,8 +19,19 @@ env:
   IMAGE_NAME: essay-show
 
 jobs:
+  env:
+    runs-on: elion-runners
+    outputs:
+      VAR_KUBE_VERSION: ${{ steps.env.outputs.VAR_KUBE_VERSION }}
+      SECRET_DOCKERHUB_ACCESS_TOKEN: ${{ steps.env.outputs.SECRET_DOCKERHUB_ACCESS_TOKEN }}
+    steps:
+      - id: env
+        run: |
+          echo "VAR_KUBE_VERSION=$VAR_KUBE_VERSION" >> "$GITHUB_OUTPUT"
+          echo "SECRET_DOCKERHUB_ACCESS_TOKEN=$SECRET_DOCKERHUB_ACCESS_TOKEN" >> "$GITHUB_OUTPUT"
   build:
-    runs-on: ubuntu-latest
+    runs-on: elion-runners
+    needs: env
     outputs:
       version: ${{ steps.version.outputs.version }}
     steps:
@@ -31,10 +42,6 @@ jobs:
         id: version
         run: curl -s https://raw.githubusercontent.com/xh-polaris/chore/main/bump_version.sh | bash -s -- ${{ env.USERNAME }}/${{ env.IMAGE_NAME }}
 
-#      # Workaround: https://github.com/docker/build-push-action/issues/461
-#      - name: Setup Docker buildx
-#        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
-
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
@@ -43,7 +50,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ env.USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          password: ${{ needs.env.outputs.SECRET_DOCKERHUB_ACCESS_TOKEN }}
 
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
@@ -62,11 +69,10 @@ jobs:
           push: ${{ github.event_name == 'push' }}
           tags: ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: elion-runners
     needs: build
     if: github.event_name == 'push'
     steps:
